--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
-    "jQuery": "^2.2.3"
+    "jQuery": "^2.2.3",
+    "css-hamburgers": "^0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
